# turbo-pdf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tarpaulin.toml  tsconfig.json
.github/workflows/: ci.yml  release-crates.yml  release-py.yml  release.yml  release.yml.draft
TODO/: pdf-a.md  pdf-ua.md  svg.md  xref.md
benches/competitive/: README.md  RESULTS.md  package.json  tsconfig.json
benches/competitive/src/: cli.ts  types.ts
benches/competitive/src/adapters/: gotenberg.ts  index.ts  jspdf.ts  pdfkit.ts  playwright.ts  puppeteer.ts  reactpdf.ts  subprocess.ts  turbopdf.ts  typst.ts  util.ts  weasyprint.ts  wkhtmltopdf.ts
benches/competitive/src/compare/: diff.ts  pixelmatch.d.ts  raster.ts
benches/competitive/src/runner/: context.ts  io.ts  measure.ts  report.ts  results.ts  run.ts  stats.ts
benches/competitive/src/workloads/: data.ts  fonts.ts  html.ts  index.ts  typst.ts
conformance/: README.md  conformance.test.mjs  harness.mjs  matrix.mjs  package.json  png.mjs
crates/turbo-html2pdf-core/: Cargo.toml  README.md
crates/turbo-html2pdf-core/assets/fonts/: NOTICE.md
crates/turbo-html2pdf-core/assets/icc/: README.md
crates/turbo-html2pdf-core/benches/: fixtures.rs  render.rs
crates/turbo-html2pdf-core/src/: append.rs  endnotes.rs  error.rs  html_layout.rs  image.rs  lib.rs  node.rs  options.rs  perf.rs  svg.rs
crates/turbo-html2pdf-core/src/emit/: color.rs  document.rs  encrypt.rs  fonts.rs  graphics.rs  image.rs  meta.rs  mod.rs  page.rs  pdfa.rs  text.rs  ua.rs  watermark.rs
crates/turbo-html2pdf-core/src/emit/encrypt/: parse.rs  serialize.rs
crates/turbo-html2pdf-core/src/layout/: block.rs  boxgen.rs  boxgen_xref.rs  flex.rs  fragment.rs  imgsize.rs  inline.rs  mod.rs  table.rs  value.rs
crates/turbo-html2pdf-core/src/paginate/: geometry.rs  mod.rs  walk.rs
crates/turbo-html2pdf-core/src/style/: cascade.rs  mod.rs  parser.rs  selector.rs  token.rs
crates/turbo-html2pdf-core/src/template/: filters.rs  functions.rs  markup.rs  mod.rs  regions.rs  switch.rs
crates/turbo-html2pdf-core/src/text/: font.rs  inline.rs  mod.rs  registry.rs
crates/turbo-html2pdf-core/tests/: append.rs  bundled_fonts.rs  complex_layout_harness.rs  conformance_flags.rs  emit.rs  encrypt.rs  endnotes.rs  filters.rs  fixtures.rs  footnotes.rs  hackernews_layout_harness.rs  image.rs  layout.rs  layout_block.rs  layout_boxgen.rs  layout_flex.rs  layout_fragment.rs  layout_grid.rs  layout_inline.rs  layout_position.rs  layout_table.rs  layout_value.rs  nodes.rs  paginate.rs  pdf_a.rs  pdf_ua.rs  perf.rs  positioning_harness.rs  print_color.rs  render.rs  smoke_html_fragment.rs  style.rs  svg.rs  switch.rs  templating.rs  text.rs  types.rs  watermark.rs  wikipedia_layout_harness.rs  xref.rs  (+1 more)
crates/turbo-html2pdf-core/tests/common/: mod.rs
crates/turbo-html2pdf-core/tests/fixtures/invoice/: data.json  template.html
crates/turbo-html2pdf-core/tests/fixtures/legal/: template.html
crates/turbo-html2pdf-core/tests/fixtures/mixed/: data.json
crates/turbo-html2pdf-core/tests/fixtures/report/: template.html
crates/turbo-html2pdf-mcp/: Cargo.toml  README.md
crates/turbo-html2pdf-mcp/src/: lib.rs  main.rs
crates/turbo-pdf-core/: Cargo.toml  README.md
crates/turbo-pdf-core/assets/fonts/: NOTICE.md
crates/turbo-pdf-core/benches/: fixtures.rs  render.rs
crates/turbo-pdf-core/src/: image.rs  lib.rs  perf.rs  render.rs
crates/turbo-pdf-core/src/emit/: color.rs  document.rs  fonts.rs  graphics.rs  image.rs  meta.rs  mod.rs  page.rs  text.rs  tounicode.rs  unit.rs  watermark.rs  xref.rs
crates/turbo-pdf-core/src/layout/: block.rs  boxgen.rs  boxgen_ua.rs  flex.rs  fragment.rs  mod.rs  value.rs
crates/turbo-pdf-core/src/paginate/: footnotes.rs  mod.rs
crates/turbo-pdf-core/src/style/: cascade.rs  mod.rs
crates/turbo-pdf-core/src/text/: bundled.rs  font.rs
crates/turbo-pdf-core/tests/: append.rs  bundled_fonts.rs  emit.rs  endnotes.rs  fixtures.rs  footnotes.rs  image.rs  layout.rs  layout_block.rs  layout_flex.rs  layout_fragment.rs  layout_inline.rs  layout_value.rs  perf.rs  print_color.rs  render.rs  svg.rs  text.rs  watermark.rs  xref.rs
crates/turbo-pdf-core/tests/common/: mod.rs
crates/turbo-pdf-core/tests/fixtures/invoice/: style.css
crates/turbo-pdf-core/tests/fixtures/legal/: data.json  style.css
crates/turbo-pdf-core/tests/fixtures/mixed/: template.html
crates/turbo-pdf-core/tests/fixtures/report/: data.json  style.css
crates/turbo-pdf-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/turbo-pdf-napi/__test__/: conformance.test.mjs  e2e.test.mjs  images-watermark.test.mjs
crates/turbo-pdf-napi/scripts/: copy-addon.mjs
crates/turbo-pdf-napi/src/: convert.rs  errors.rs  lib.rs
crates/turbo-pdf-py/: Cargo.toml  README.md  pyproject.toml
crates/turbo-pdf-py/python/turbo_html2pdf/: __init__.py  __init__.pyi
crates/turbo-pdf-py/src/: convert.rs  errors.rs  lib.rs
crates/turbo-pdf-py/tests/: test_conformance.py  test_render.py
crates/turbo-pdf-wasm/: Cargo.toml
crates/turbo-pdf-wasm/__test__/: conformance.test.mjs
crates/turbo-pdf-wasm/src/: convert.rs  lib.rs  program.rs
docs/: api.md  css-support.md  deploy-plan.md  dsl.md  guide.md  paged-media.md
