[workspace]
resolver = "2"
members = [
    "crates/turbo-pdf-core",
    "crates/turbo-pdf-napi",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/fluxpayroll/turbo-pdf"
authors = ["turbo-pdf contributors"]
rust-version = "1.82"

[workspace.dependencies]
minijinja = { version = "2", features = ["loader", "macros", "custom_syntax", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
