[workspace]
resolver = "2"
members = [
    "crates/turbo-pdf-core",
    "crates/turbo-pdf-napi",
    "crates/turbo-pdf-py",
    "crates/turbo-pdf-wasm",
    "crates/turbo-html2pdf-mcp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/miaskiewicz/turbo-html2pdf"
authors = ["turbo-pdf contributors"]
# Real workspace floor: the default `cargo build --workspace` is dominated by
# `napi-build` (rust-version 1.88); the core engine's font-subset stack
# (`subsetter`/`skrifa`/`write-fonts`) needs 1.85. So 1.88 is the true MSRV.
rust-version = "1.88"

[workspace.dependencies]
minijinja = { version = "2", features = ["loader", "macros", "custom_syntax", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
