[package]
name = "turbo-pdf-core"
description = "Native HTML/CSS-to-PDF engine with a Jinja-compatible templating DSL (core crate)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# The cyclomatic-complexity gate (cc < 6) is enforced by `tools/cc-check`, which
# matches the TS gate in `scripts/cc-check.js`. Clippy's nursery
# `cognitive_complexity` lint is intentionally not used: it double-counts macro
# expansions (e.g. `assert_eq!`) and fires false positives on test functions.

[features]
# Hot-path instrumentation (Phase 13, §13). Off by default so production builds
# pay nothing; enable to read the counters in `perf` (e.g. `cargo test --features
# perf`, `cargo bench --features perf`).
perf = []

# --- Phase 15 capability gates -------------------------------------------------
# Each is off by default: the default build is byte-for-byte unchanged and the
# gated code is not compiled (so it stays out of the default coverage gate, like
# `perf`). Every feature builds and tests independently; `--all-features` builds.

# `<t:endnote>` collects a note; `<t:endnotes/>` renders the collected list at its
# position. Builds on the footnote numbering infra (§3, AC: endnotes).
endnotes = []

# Accept `cmyk(...)` colours and emit DeviceCMYK instead of DeviceRGB for print
# workflows (AC-7.x print colour).
print-color = []

[dependencies]
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"
rustybuzz = "0.20.1"
self_cell = "1"
unicode-linebreak = "0.1.5"
taffy = "0.8"
pdf-writer = "0.15.0"
subsetter = "0.2.6"
png = "0.18.1"
jpeg-decoder = { version = "0.3.2", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
criterion = "0.5"

# Phase 13 groundwork: criterion benchmark harness measuring the pipeline that
# exists today (compile -> render_nodes -> style cascade -> layout galley).
# Benches are excluded from the default `cargo test` harness so they don't run
# as tests; invoke them with `cargo bench`.
[[bench]]
name = "render"
harness = false
