[package]
name = "turbo-pdf-core"
description = "Native HTML/CSS-to-PDF engine with a Jinja-compatible templating DSL (core crate)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# The cyclomatic-complexity gate (cc < 6) is enforced by `tools/cc-check`, which
# matches the TS gate in `scripts/cc-check.js`. Clippy's nursery
# `cognitive_complexity` lint is intentionally not used: it double-counts macro
# expansions (e.g. `assert_eq!`) and fires false positives on test functions.

[features]
# `bundled-fonts` is ON by default: the core embeds a small set of OFL-licensed
# faces (Inter/Roboto, Liberation Serif/PT Serif, Fira Code/IBM Plex Mono) so a
# document renders with ZERO caller-supplied fonts — `font-family: sans-serif`
# etc. resolve against the embedded set. Disabling it (`--no-default-features`)
# makes the build byte-for-byte the no-bundled build: no font bytes are embedded
# and `FontRegistry` behaves exactly as a registry of only caller faces.
default = ["bundled-fonts"]
bundled-fonts = []

# Hot-path instrumentation (Phase 13, §13). Off by default so production builds
# pay nothing; enable to read the counters in `perf` (e.g. `cargo test --features
# perf`, `cargo bench --features perf`).
perf = []

# --- Phase 15 capability gates -------------------------------------------------
# Each is off by default: the default build is byte-for-byte unchanged and the
# gated code is not compiled (so it stays out of the default coverage gate, like
# `perf`). Every feature builds and tests independently; `--all-features` builds.

# `<t:endnote>` collects a note; `<t:endnotes/>` renders the collected list at its
# position. Builds on the footnote numbering infra (§3, AC: endnotes).
endnotes = []

# Accept `cmyk(...)` colours and emit DeviceCMYK instead of DeviceRGB for print
# workflows (AC-7.x print colour).
print-color = []

# Append/merge external PDF pages after turbo's rendered pages. A pure post-emit
# step that glues a foreign certified PDF (e.g. Mexican CFDI / Portuguese DSNE)
# onto the end of an `emit_pdf` result. Pulls `lopdf` (read+write) only when
# enabled — the default build never compiles it. (AC: append.)
append = ["dep:lopdf"]

# Vector (SVG) image support (Phase 15b, §7.4). Off by default: the rasterizer
# (`resvg`/`usvg`/`tiny-skia`) pulls a large transitive tree pinned for a stable
# MSRV (well under the workspace's 1.88 floor) and audited for determinism (no
# system fonts, no time, no threads). When on,
# `image/svg+xml` bytes are rasterized into an RGBA buffer that feeds the
# existing Phase 9b image XObject pipeline unchanged.
svg = ["dep:resvg"]

# `<t:anchor name="x">` becomes a named GoTo destination and `<a href="#x">`
# becomes an internal Link annotation that jumps to it (AC-3.25). Threads the
# anchor name / link href from boxgen through the positioned fragment, then a
# two-pass emit writes a `/Dests` name tree plus per-page Link `/Annots`. Off by
# default: the default path carries `None` xref data at near-zero cost.
xref = []

# PDF/A-2b archival ("keep-forever") conformance (AC-11.2): embeds a vendored
# sRGB ICC profile as an OutputIntent, writes an XMP metadata packet declaring
# pdfaid part 2 / conformance B, adds a deterministic trailer /ID, and disables
# the watermark's `/ca` fade (PDF/A forbids transparency). Fonts are already
# embedded. Validated with veraPDF (`--flavour 2b`) in tests/pdf_a.rs.
pdf-a = []

# Tagged / accessible PDF (PDF/UA-1, AC-11.1): carries a structure role + alt
# text from the semantic HTML down to each fragment, wraps painted content in
# marked-content (`BDC`/`EMC`) with per-page MCIDs, and builds a `StructTreeRoot`
# + `ParentTree` in the catalog, with `/MarkInfo`, `/Lang`, an XMP packet and the
# `DisplayDocTitle` viewer preference. Validated with veraPDF `--flavour ua1`.
pdf-ua = []

# AES-256 password protection (PDF 2.0 Standard Security Handler, V=5/R=6,
# AESV3). Off by default: the default build is byte-for-byte unchanged and pulls
# in NO crypto crates. This is the ONE place the engine's "no randomness" rule is
# waived — encryption legitimately needs entropy for salts/IVs — and ONLY under
# this feature, via `getrandom`. Output with a password set is intentionally
# non-deterministic (random salts/IV); with `encryption: None` (even feature-on)
# the output stays byte-deterministic.
encrypt = ["dep:aes", "dep:cbc", "dep:sha2", "dep:getrandom"]

[dependencies]
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"
rustybuzz = "0.20.1"
self_cell = "1"
unicode-linebreak = "0.1.5"
taffy = "0.8"
pdf-writer = "0.15.0"
subsetter = "0.2.6"
png = "0.18.1"
jpeg-decoder = { version = "0.3.2", default-features = false }

# `append` feature only (off by default). Read+write+merge for the post-emit PDF
# glue step; `pdf-writer` is write-only and cannot parse a foreign PDF. Default
# features (chrono/jiff/time/rayon) are off — the merge needs only parse+write,
# which keeps the extra dependency surface small.
lopdf = { version = "0.36.0", default-features = false, optional = true }

# `svg` feature only (optional). Pinned EXACT for reproducible rendering output:
# resvg 0.45.1 (0.46+ moves to edition 2024 and changes raster output). It builds
# comfortably under the workspace's 1.88 floor. `default-features = false` drops
# `system-fonts` (the only non-deterministic
# input: a system font lookup) plus the `text`/raster-image decoders we don't need;
# shape/gradient/clip rendering stays fully deterministic. resvg re-exports `usvg`
# and `tiny-skia`, so they need no separate dependency line. See src/svg.rs.
resvg = { version = "=0.45.1", default-features = false, optional = true }

# --- `encrypt` feature crypto deps (optional; only compiled with `--features
# encrypt`). Pinned to the RustCrypto 0.8/0.10-era + getrandom 0.2, which build
# on the repo's MSRV (1.88). `aes` = AES-256 block cipher, `cbc` = CBC mode (with
# IV), `sha2` = the SHA-256/384/512 used by the Algorithm 2.B hardened hash,
# `getrandom` = the OS CSPRNG for salts/IVs.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = "0.5"

# Phase 13 groundwork: criterion benchmark harness measuring the pipeline that
# exists today (compile -> render_nodes -> style cascade -> layout galley).
# Benches are excluded from the default `cargo test` harness so they don't run
# as tests; invoke them with `cargo bench`.
[[bench]]
name = "render"
harness = false
