[package]
name = "turbo-pdf-napi"
description = "N-API binding: the turbo-pdf template->PDF pipeline exposed to Node/JS (Phase 10)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# cdylib for the Node native addon; rlib so the binding can be unit-tested and
# linked from Rust if ever needed. Mirrors the proven turbo-dom napi crate.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
turbo-html2pdf-core = { path = "../turbo-html2pdf-core", features = [
    "endnotes",
    "xref",
    "pdf-a",
    "pdf-ua",
    "print-color",
    "append",
    "encrypt",
] }
serde = { workspace = true }
serde_json = { workspace = true }
# napi-rs front-end (native addon). `napi6` matches turbo-dom's ABI baseline.
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2"

[features]
# Passthrough for the core `svg` feature (vector `<img>` via resvg). OFF by
# default: the standard `turbo-html2pdf` package ships without it. The separate
# `turbo-html2pdf-svg` package is built with `napi build --features svg` (see the
# `build-napi-svg`/`publish-svg` jobs in .github/workflows/release.yml).
svg = ["turbo-html2pdf-core/svg"]

[build-dependencies]
napi-build = "2"
