[package]
name = "turbo-pdf-wasm"
description = "HTML/CSS + Jinja templating to PDF in the browser via WebAssembly — no server, no Chromium."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# A cdylib so `wasm-bindgen` / `wasm-pack` can produce the `.wasm` + JS glue.
# rlib is kept so the crate also type-checks and links on the host (and so the
# workspace `cargo build` / clippy can see it without the wasm target).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `default-features = false` keeps the browser `.wasm` LEAN: the core's default
# `bundled-fonts` feature embeds ~6 MB of OFL faces, which is right for the Node
# addon but unacceptable over the wire on page load. Browser callers supply font
# bytes at runtime via the existing `fonts` API. The batteries-included variant
# ships as a SEPARATE package (`turbo-html2pdf-wasm-fonts`) built with the
# `bundled-fonts` feature below.
turbo-pdf-core = { path = "../turbo-pdf-core", default-features = false, features = [
    "endnotes",
    "xref",
    "pdf-a",
    "pdf-ua",
    "print-color",
    "append",
    "encrypt",
] }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
js-sys = "0.3"

# Browser CSPRNG backends for the `encrypt` (salts/IVs) and `append` (lopdf pulls
# `rand`) features. These are wasm-target-only: on the host they are unused, but
# the `wasm32-unknown-unknown` build needs a randomness backend. getrandom 0.2's
# `js` feature and 0.3's `wasm_js` feature route to the Web Crypto API. Building
# the `.wasm` additionally needs `RUSTFLAGS='--cfg getrandom_backend="wasm_js"'`
# for the 0.3 line (see README / build script).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# wasm-bindgen-rayon multithreading is intentionally OFF by default (§8.3): the
# default build is single-threaded so it runs in any browser without
# cross-origin-isolation. The flag is reserved but wires nothing yet.
[features]
default = []
threads = []

# Opt-in: embed the core's default OFL font set into the `.wasm` so the browser
# build renders with no caller fonts. OFF by default to keep the shipped
# `turbo-html2pdf-wasm` lean; the `turbo-html2pdf-wasm-fonts` package is built
# with `wasm-pack build --features bundled-fonts` to turn this on.
bundled-fonts = ["turbo-pdf-core/bundled-fonts"]
